--- a/package.json
+++ b/package.json
@@ -10,9 +10,27 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.13.13",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "axios": "^0.21",
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-refresh": "^0.10.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@emotion/css": "^11.1.3",
+        "@reduxjs/toolkit": "^1.6.0",
+        "dotenv": "^10.0.0",
+        "react-bootstrap": "^1.6.1",
+        "react-redux": "^7.2.4"
     }
 }
