--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -28,6 +30,7 @@
     },
     "dependencies": {
         "@emotion/css": "^11.1.3",
+        "@emotion/react": "^11.4.0",
         "@reduxjs/toolkit": "^1.6.0",
         "dotenv": "^10.0.0",
         "react-bootstrap": "^1.6.1",
