--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "dependencies": {
         "@emotion/css": "^11.1.3",
         "@emotion/react": "^11.4.0",
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
         "@reduxjs/toolkit": "^1.6.0",
         "dotenv": "^10.0.0",
         "react-bootstrap": "^1.6.1",
+        "react-device-detect": "^1.17.0",
         "react-redux": "^7.2.4"
     }
 }
